Actions
Bug #7898
closedmdb's ::netstat doesn't print UDP conn_t pointer correctly
Start date:
2017-02-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
If you use "::netstat -P udp" on a kernel mdb (kmdb or "mdb -k"), all of the UDP sessions print the same pointer. This is clearly a bug.
The bug, BTW, is that the printed pointer is from the mdb process's address space, not from the actual kernel. The netstat_udp_cb() function is broken, in a way that its counterpart netstat_tcp_cb() is not. Make the UDP one act more like the TCP one.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit e40108ff341f07fe03e96c751c6cf2cb5867d1a8
commit e40108ff341f07fe03e96c751c6cf2cb5867d1a8 Author: Dan McDonald <danmcd@omniti.com> Date: 2017-02-22T14:38:30.000Z 7898 mdb's ::netstat doesn't print UDP conn_t pointer correctly Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Robert Mustacchi <rm@joyent.com>
Actions